# CSIM

./: CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt  Circuit.cc  Dataset.cc  Netlist.cc
core/analyzer/: AnalyzerAC.cc  AnalyzerAC.h  AnalyzerDC.cc  AnalyzerDC.h  AnalyzerOP.cc  AnalyzerOP.h  AnalyzerTran.cc  AnalyzerTran.h  Analyzers.cc  Sweep.cc  SweepDecade.cc  SweepLinear.cc  SweepLogarithm.cc  SweepOctave.cc
core/models/: CCCS.cc  CCCS.h  CCVS.cc  CMakeLists.txt  Capacitor.cc  IAC.cc  IDC.cc  IDC.h  Inductor.cc  Inductor.h  PN.cc  PN.h  Resistor.cc  Resistor.h  VAC.cc  VAC.h  VCCS.cc  VCVS.cc  VCVS.h  VDC.cc
core/models/base/: Environment.cc  MComplex.cc  ModelBase.cc  PropertyBag.cc  Variant.cc
core/models/base/compact/: SPICE-Compatible.cc  SPICE-Devsup.cc
core/models/bsim3v32/: bsim3v32-conv.cc  bsim3v32-model.cc  bsim3v32-stamp.cc  bsim3v32-status.cc  bsim3v32.cc  bsim3v32.h
core/models/loader/: Loader.cc
core/optimizer/: GminOptimizer.cc  MNAOptimizer.cc
core/parser/: .gitignore  algebraic.cc  ast-hspice.cc  lex-algebraic.cc  lex-algebraic.lpp  lex-hspice.cc  lex-hspice.lpp  parse-algebraic.cc  parse-algebraic.h  parse-algebraic.ypp  parse-hspice.cc  parse-hspice.h  parse-hspice.ypp
core/solver/: IntegralCorrector.cc  IntegralCorrectorGear.cc  IntegralCorrectorGear.h  IntegralHistory.cc  IntegralPredictor.cc  IntegralPredictorEuler.cc  IntegralPredictorGear.cc  IntegralPredictorGear.h  LinearSolver.cc  LinearSolverGauss.cc  LinearSolverGauss.h  LinearSolverLU.cc  LinearSolverLU.h
core/utils/: CMakeLists.txt  errors.cc  errors.sed  string.cc
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
include/csim/: Circuit.h  ModelBase.h  PropertyBag.h  SubCircuit.h  Types.h  Variant.h
include/csim/internal/: AnalyzerAC.h  AnalyzerDC.h  AnalyzerTran.h  Analyzers.h  Circuit.h  Complex.h  Dataset.h  GminOptimizer.h  IntegralCorrector.h  IntegralHistory.h  IntegralPredictor.h  LinearSolver.h  LinearSolverOptimizer.h  MNAOptimizer.h  Math.h  ModelLoader.h  Netlist.h  Sweep.h  SweepDecade.h  SweepLinear.h  SweepLogarithm.h  SweepOctave.h
include/csim/internal/parser/: algebraic-defs.h  hspice-defs.h
include/csim/model/: Environment.h  ModelBase.h  PropertyBag.h  PropertyMdl.h  StatusBag.h  Types.h  Variant.h
include/csim/model/compact/: SPICE-Compatible.h  SPICE-Devsup.h
include/csim/utils/: constants.h  errors.h  macros.h  string.h
src/: CMakeLists.txt  Circuit.cc  Dataset.cc  Netlist.cc  SubCircuit.cc  main.cc
src/analyzer/: AnalyzerAC.cc  AnalyzerDC.cc  AnalyzerTran.cc  AnalyzerTran.h  Analyzers.cc
src/models/: CCCS.cc  CCVS.cc  CCVS.h  CMakeLists.txt  Capacitor.cc  Capacitor.h  Constants.h  IAC.cc  IAC.h  IDC.cc  Inductor.cc  Inductor.h  ModelBase.cc  PN.cc  PN.h  Resistor.cc  Resistor.h  VAC.cc  VAC.h  VCCS.cc  VCCS.h  VCVS.cc  VDC.cc  VDC.h
src/models/base/: CMakeLists.txt  MComplex.cc  ModelBase.cc  PropertyBag.cc  Variant.cc
src/models/loader/: Loader.cc
src/optimizer/: MNAOptimizer.cc
src/solver/: IntegralCorrector.cc  IntegralCorrectorGear.cc  IntegralCorrectorGear.h  IntegralPredictor.cc  IntegralPredictorEuler.cc  IntegralPredictorEuler.h  IntegralPredictorGear.cc  IntegralPredictorGear.h  LinearSolver.cc  LinearSolverGauss.cc  LinearSolverGauss.h  LinearSolverLU.cc  LinearSolverLU.h
src/utils/: CMakeLists.txt  PropertyBag.cc  Variant.cc  errors.cc  errors.sed
testcases/: CMakeLists.txt  clear_coverage.cmake  clear_coverage_no.cmake  constants.h  main.cc  tstACLinearCircuit.cc  tstAlgebraic.cc  tstBSIM3v32.cc  tstCapacitorDC.cc  tstCapacitorOP.cc  tstDCLinearCircuit.cc  tstDCNonlinearCircuit.cc  tstDCSources.cc  tstGearTruncationError.cc  tstHSPICEParser.cc  tstInductorDC.cc  tstInductorOP.cc  tstIntegralCorrector.cc  tstIntegralCorrectorData.h  tstIntegralPredictor.cc  tstLinearCircuit.cc  tstLinearSolver.cc  tstLinearSolver.h  tstLinearSolverGauss.cc  tstLinearSolverLU.cc  tstLoader.cc  tstNonlinearCircuit.cc  tstOPLinearCircuit.cc  tstOPNonlinearCircuit.cc  tstOPSources.cc  tstTransientAnalysis.cc  tstTransientNonlinearCircuit.cc  tstVACInDC.cc  tstVACInOP.cc
